fix sidebar on mobile (legacy pages) (#640)

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -6047,6 +6047,13 @@ div.notice {
   width: 60%;
   max-width: 660px; }
 
+@media (max-width: 767px) {
+  div.notice {
+    max-width: 100%;
+    width: 100%;
+  }
+}
+
 pre.prettyprint {
   padding: 10px;
   max-width: 660px; }
@@ -6062,6 +6069,15 @@ pre.prettyprint {
   padding: 0.25em;
   border: solid #ccc;
   border-width: .1em .1em .1em .1em; }
+
+@media (max-width: 991px) {
+  #subnav {
+    position: relative;
+    left: auto;
+    top: 0;
+    width: 100%;
+  }
+}
 
 #subnav ul {
   margin: 0;
